# urban-pulse-platform

./: .coverage  .env.example  .env.prod.example  .gitignore  ANOMALY.md  CLAUDE.md  DEPLOY.md  ML.md  Makefile  README.md  SYSTEM.md  api.py  docker-compose.yml  pyproject.toml  routes.json  routes_generator.py  test.py  zones.json
.github/workflows/: cd.yml  ci.yml  cicd.yml  deploy.yml
.understand-anything/: knowledge-graph.json  meta.json
apps/batch/: Dockerfile  pyproject.toml
apps/batch/src/batch/: __init__.py  bootstrap_cli.py  logger.py  main.py  pipeline.py
apps/batch/src/batch/jobs/: alerter.py  baseline_learning.py  bronze_to_silver.py  bronze_to_silver_weather.py  rag_indexer.py  silver_to_gold.py  silver_to_gold_weather.py  weather_bootstrap.py
apps/batch/src/batch/queries/: anomaly_features.sql  gold_priority_score.sql  traffic_baseline.sql
apps/ingestion/: Dockerfile  pyproject.toml
apps/ingestion/src/ingestion/: logger.py  main.py  orchestrator.py
apps/ingestion/src/ingestion/publishers/: __init__.py  kafka.py
apps/ingestion/src/ingestion/sources/: openmeteo.py  vietmap.py  waqi.py
apps/ingestion/tests/: conftest.py  test_kafka_publisher.py  test_orchestrator.py  test_vietmap.py
apps/ml/: Dockerfile  pyproject.toml
apps/ml/src/ml/: api.py  train.py
apps/ml/src/ml/evaluation/: metrics.py
apps/ml/src/ml/features/: traffic_features.py
apps/ml/src/ml/models/: isolation_forest.py  zscore_detector.py
apps/ml/tests/: conftest.py  test_detectors.py  test_metrics.py  test_traffic_features.py
apps/online/: Dockerfile  pyproject.toml
apps/online/src/online/: app.py  baseline.py  models.py
apps/online/tests/: conftest.py  test_online_processor.py  test_route_window.py
apps/serving/: Dockerfile  pyproject.toml
apps/serving/src/serving/: app.py  dependencies.py  geo_knowledge.py  main.py
apps/serving/src/serving/controllers/: anomaly_controller.py  chat_controller.py  explain_controller.py  metrics_controller.py  predict_controller.py  rca_controller.py
apps/serving/src/serving/models/: prediction.py
apps/serving/src/serving/repo/: anomalies.py  interactions.py  metrics.py  online.py  predictions.py
apps/serving/src/serving/routers/: anomalies.py  chat.py  explain.py  health.py  metrics.py  online.py  predict.py  rca.py  telegram.py  ws.py
apps/serving/src/serving/schemas/: anomaly.py  chat.py  rca.py  traffic.py
apps/serving/src/serving/services/: anomaly_service.py  llm_service.py  prediction_service.py
apps/serving/src/serving/utils/: routes.py  serializers.py  weather.py
apps/serving/tests/: conftest.py  test_prediction_service.py  test_routers.py
apps/streaming/: Dockerfile  pyproject.toml
apps/streaming/src/streaming/: base.py  main.py
apps/streaming/src/streaming/consumers/: kafka.py
apps/streaming/src/streaming/processors/: air_quality.py  base.py  traffic.py  vietmap_raw.py  weather.py
apps/streaming/src/streaming/sinks/: minio.py
apps/streaming/tests/: conftest.py  test_traffic_processor.py
apps/traffic-ingestion/: Dockerfile  pyproject.toml
apps/traffic-ingestion/src/traffic_ingestion/: logger.py  (+2 more)
apps/traffic-ingestion/tests/: conftest.py  test_kafka_publisher.py  test_orchestrator.py  test_vietmap.py
apps/weather-ingestion/: Dockerfile  pyproject.toml
docs/: architecture.md
docs/adr/: 001-medallion-architecture.md  002-zone-based-sampling.md  003-duckdb-for-batch.md
docs/architecture/: online-service-welford.md
docs/runbooks/: anomaly-spike.md  ingestion-failure.md
docs/thesis/: TECHSTACK.md  TOPIC.md
infra/docker/: docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml
infra/docker/dremio/: setup.sh
infra/docker/nessie/: application.properties
infra/monitoring/logging/: loki-config.yml  promtail-config.yml
infra/monitoring/prometheus/: prometheus.yml
infra/scripts/: healthcheck.sh  init-minio-buckets.sh  init-redpanda-topics.sh
infra/traefik/: dynamic.yml  traefik.yml
platform/notebooks/: eda_silver_traffic.ipynb
platform/schemas/: traffic-route-bronze.json
tests/integration/: conftest.py  test_e2e_pipeline.py
(+23 files in other folders)
