[project]
name = "batch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "urbanpulse-core",
    "urbanpulse-infra-clients",
    "prefect>=3.0",
    "duckdb>=1.1",
]

[tool.uv.sources]
urbanpulse-core = { workspace = true }
urbanpulse-infra-clients = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/batch"]
