[project]
name = "batch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "urbanpulse-core",
    "urbanpulse-infra-clients",
    "urbanpulse-rag",
    "prefect>=3.0",
    "duckdb>=1.1",
    "pyiceberg[s3fs,pyarrow]>=0.9",
    "pyarrow>=18.0",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
]

[tool.uv.sources]
urbanpulse-core = { workspace = true }
urbanpulse-infra-clients = { workspace = true }
urbanpulse-rag = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/batch"]
