[project]
name = "ingestion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "urbanpulse-core",
    "urbanpulse-infra-clients",
    "requests>=2.32",
]

[tool.uv.sources]
urbanpulse-core = { workspace = true }
urbanpulse-infra-clients = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
