[project]
name = "ml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "urbanpulse-core",
    "urbanpulse-infra-clients",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "pyarrow>=15",
    "boto3>=1.34",
    "psutil>=5.9",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[tool.uv.sources]
urbanpulse-core = { workspace = true }
urbanpulse-infra-clients = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml"]
