[project]
name = "serving"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "urbanpulse-core",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "asyncpg>=0.29.0",
    "mlflow-skinny>=2.14.0,<2.22",
    "boto3>=1.34.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
]

[tool.uv.sources]
urbanpulse-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/serving"]
