[project]
name = "streaming"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "urbanpulse-core",
    "confluent-kafka>=2.3.0",
    "minio>=7.2.0",
    "pyarrow>=15.0.0",
]

[tool.uv.sources]
urbanpulse-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streaming"]
